--- a/next-shop/package.json
+++ b/next-shop/package.json
@@ -12,7 +12,8 @@
     "cookie": "^0.5.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "autoprefixer": "^10",
