--- a/next-reviews/package.json
+++ b/next-reviews/package.json
@@ -1,6 +1,11 @@
 {
   "name": "next-reviews",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^13.5.6",
     "react": "^18.2.0",
