--- a/next-reviews/package.json
+++ b/next-reviews/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "marked": "^10.0.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
