--- a/next-reviews/package.json
+++ b/next-reviews/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.31",
+    "prisma": "^5.8.0",
     "tailwindcss": "^3.3.5"
   }
 }
