--- a/next-reviews/package.json
+++ b/next-reviews/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.8.0",
     "gray-matter": "^4.0.3",
     "marked": "^10.0.0",
     "next": "^13.5.6",
